[tool.poetry]
name = "pinger"
version = "0.1.0"
description = "pinger"
authors = ["engineering <engineering@pinger.com>"]
license = "allrightsreserved"
readme = "README.md"
package-mode = true
packages = [{ include = "pinger", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^2.11.2"
typer = "^0.15.2"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
lcs = "pinger.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
