[metadata]
name = pinger
version = 0.1.0
description = Platform engineering CLI
author = Pinger Engineering
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drzln/pinger

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9,<4.0
install_requires =
    typer>=0.15.2
    pydantic>=2.11.2
    pyyaml>=6.0.2

[options.entry_points]
console_scripts =
    pinger = pinger.cli:cli
